--- a/package.json
+++ b/package.json
@@ -17,9 +17,13 @@
   },
   "homepage": "https://github.com/TomDobbelaere/website-proxy#readme",
   "dependencies": {
+    "compression": "^1.7.4",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "http-proxy-middleware": "^0.19.1",
+    "minify": "^4.1.1",
+    "morgan": "^1.9.1",
+    "rotating-file-stream": "^1.4.0",
     "vhost": "^3.0.2"
   }
 }
