--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "compression": "^1.7.4",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
+    "express-minify": "^1.0.0",
     "http-proxy-middleware": "^0.19.1",
-    "minify": "^4.1.1",
     "morgan": "^1.9.1",
     "rotating-file-stream": "^1.4.0",
     "vhost": "^3.0.2"
